# paper-loop2

./: .gitignore  CLAUDE.md  README.md  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: bot.onnx  bot.plb
app/src/main/kotlin/paper/loop2/: App.kt  GameActivity.kt
app/src/main/kotlin/paper/loop2/core/: Assets.kt  Haptics.kt  Palette.kt  Scores.kt  Settings.kt  SoundFx.kt
app/src/main/kotlin/paper/loop2/game/: Bot.kt  BotNet.kt  Draw.kt  GameScreen.kt  Geom.kt  Hud.kt  PaperLoopGame.kt  Player.kt  Ui.kt  World.kt  WorldRenderer.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/kotlin/paper/loop2/game/: SimTest.kt
fastlane/: Appfile  Fastfile
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 2.txt  3.txt
gym/: .gitignore  README.md  bench.py  export.py  personalities.sh  pyproject.toml  replay.py  run_pipeline.sh  tournament.py  train.py
gym/paper_loop/: env.py  match.py  model.py  rules.py  scripted.py
gym/tests/: test_env.py
